--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@ tls.crt
 record.md
 record_CN.md
 1-video.md
+1-video_CN.md
 2-video.md
+2-video_CN.md
 3-video.md
+3-video_CN.md
 4-video.md
+4-video_CN.md
 5-video.md
+5-video_CN.md
