--- a/deploy/inCluster/rbac.yaml
+++ b/deploy/inCluster/rbac.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: extended-api-server
+  name: k8s-cloud-node-manager
   namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: basic-k8s-extension-api
+  name: k8s-cloud-node-manager
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
@@ -16,13 +16,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: extended-api-server
+  name: k8s-cloud-node-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: basic-k8s-extension-api
+  name: k8s-cloud-node-manager
 subjects:
   - kind: ServiceAccount
-    name: extended-api-server
+    name: k8s-cloud-node-manager
     namespace: default
-# rbac for myapiserver
+# rbac for k8s-cloud-node-manager
