--- a/deploy/outCluster/rbac.yaml
+++ b/deploy/outCluster/rbac.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: extended-api-server
+  name: k8s-cloud-node-manager
   namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: basic-k8s-extension-api
+  name: k8s-cloud-node-manager
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
@@ -16,23 +16,23 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: extended-api-server
+  name: k8s-cloud-node-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: basic-k8s-extension-api
+  name: k8s-cloud-node-manager
 subjects:
   - kind: ServiceAccount
-    name: extended-api-server
+    name: k8s-cloud-node-manager
     namespace: default
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: extended-api-server-token
+  name: k8s-cloud-node-manager-token
   namespace: default
   annotations:
-    kubernetes.io/service-account.name: extended-api-server
+    kubernetes.io/service-account.name: k8s-cloud-node-manager
 type: kubernetes.io/service-account-token
 
 # rbac for myapiserver
